# reading-list

./: .env.example  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 51f2198e9ca9_initial_migration.py
reading_list/: config.py  error_handlers.py  main.py
reading_list/api/: deps.py  router.py
reading_list/api/schemas/: common.py  item.py  item_filter.py  item_filters.py  tag.py
reading_list/api/v1/: items.py  tags.py  users.py
reading_list/db/: engine.py  seed.py
reading_list/db/models/: item.py  tag.py  user.py
reading_list/repositories/: abstract_crud.py  base_crud.py  item.py  tag.py  user.py
reading_list/services/: abstract_crud.py  item.py  tag.py  user.py
reading_list/utils/: errors.py
tests/: test_user_service.py
