[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'reading-list'
version = '0.1.0'
description = 'Reading List It Is'
authors = [
    { name='Kujo Jotaro', email='jotaro@jojo.com'}
]
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'fastapi>=0.110.0',
    'uvicorn[standard]>=0.29.0',
    'sqlalchemy[asyncio]>=2.0.29',
    'asyncpg>=0.29.0',
    'pydantic>=2.6.3',
    'pydantic-settings>=2.2.1',
    'alembic>=1.13.1',
    'python-dotenv>=1.0.1',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.4.0',
    'pytest-asyncio>=0.23.2',
    'httpx>=0.24.1',
    'ruff>=0.3.0',
]

[tool.setuptools.packages.find]
where = ['.']
include = ['reading_list*']

[tool.flake8]
exclude = [
    'alembic',
    'reading_list/db/seed.py'
]
ignore = [
    'D100',
    'D101',
    'D102',
    'D103',
    'D104',
    'DAR101',
    'DAR201',
]